--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.0",
     "react-router-dom": "^7.5.1",
     "sort-by": "^1.2.0"
   },
