--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.6.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.503.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
